--- a/docs/api/repo_settings.json
+++ b/docs/api/repo_settings.json
@@ -1,1 +1,1 @@
-{"name": "\u75af\u5b50", "description": ".", "tint": "255.255.255", "cname": "sileo-cydia.github.io/repo/", "maintainer": {"name": "\u75af\u5b50", "email": "409774743@qq.com"}, "automatic_git": "false"}
+{"automatic_git": "false", "tint": "000000", "maintainer": {"name": "\u75af\u5b50", "email": "409774743@qq.com"}, "name": "\u75af\u5b50", "description": ".", "cname": "sileo-cydia.github.io/docs"}
