--- a/Styles/settings.json
+++ b/Styles/settings.json
@@ -1,1 +1,1 @@
-{"automatic_git":"false","tint":"000000","maintainer":{"name":"疯子","email":"409774743@qq.com"},"name":"疯子","description":".","cname":"sileo-cydia.github.io/docs"}
+{"description":"壹筒天下🇨🇳","automatic_git":"false","maintainer":{"name":"他是个疯子","email":"409774743@qq.com"},"tint":"#0000FF","cname":"sileo-cydia.github.io/docs","name":"1壹筒天下 🇨🇳"}
