--- a/docs/api/repo_settings.json
+++ b/docs/api/repo_settings.json
@@ -1,1 +1,1 @@
-{"automatic_git": "false", "tint": "000000", "maintainer": {"name": "\u75af\u5b50", "email": "409774743@qq.com"}, "name": "\u75af\u5b50", "description": ".", "cname": "sileo-cydia.github.io/docs"}
+{"description": "\u58f9\u7b52\u5929\u4e0b\ud83c\udde8\ud83c\uddf3", "automatic_git": "false", "maintainer": {"name": "\u4ed6\u662f\u4e2a\u75af\u5b50", "email": "409774743@qq.com"}, "tint": "#0000FF", "cname": "sileo-cydia.github.io/docs", "name": "1\u58f9\u7b52\u5929\u4e0b \ud83c\udde8\ud83c\uddf3"}
