--- a/Styles/settings.json
+++ b/Styles/settings.json
@@ -1,1 +1,1 @@
-{"automatic_git":"","tint":"#000000","maintainer":{"name":"他是个疯子","email":"409774743@qq.com"},"name":"1壹筒天下 🇨🇳","description":"壹筒天下🇨🇳","cname":"sileo-cyida.github.io"}
+{"cname":"sileo-cyida.github.io/docs","automatic_git":"","maintainer":{"name":"他是个疯子","email":"409774743@qq.com"},"tint":"#000000","name":"1壹筒天下 🇨🇳","description":"壹筒天下🇨🇳"}
