--- a/Styles/settings.json
+++ b/Styles/settings.json
@@ -1,1 +1,1 @@
-{"cname":"sileo-cyida.github.io/docs","automatic_git":"","maintainer":{"name":"他是个疯子","email":"409774743@qq.com"},"tint":"#000000","name":"1壹筒天下 🇨🇳","description":"壹筒天下🇨🇳"}
+{"description":"壹筒天下🇨🇳","automatic_git":"","maintainer":{"name":"他是个疯子","email":"409774743@qq.com"},"tint":"#000000","cname":"sileo-cydia.github.io/docs","name":"1壹筒天下 🇨🇳"}
